# OpenRD

./: .gitignore  README.md  reader.js
docs/: 00_project_brief.md  01_architecture.md  02_mvp_plan.md  03_control_protocol.md  04_vehicle_ros2_architecture.md  05_rk3588_deployment.md
frontend/openrd_frontend/: .metadata  README.md  pubspec.yaml
frontend/openrd_frontend/android/app/: build.gradle.kts
frontend/openrd_frontend/android/app/src/main/: AndroidManifest.xml
frontend/openrd_frontend/android/app/src/main/kotlin/com/openrd/openrd_frontend/: MainActivity.kt
frontend/openrd_frontend/ios/Runner/: Info.plist
frontend/openrd_frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/openrd_frontend/lib/: control_link.dart  control_link_stub.dart  control_link_web.dart  gamepad_input.dart  gamepad_input_stub.dart  gamepad_input_web.dart  gamepad_state.dart  main.dart  video_health_stub.dart  video_health_web.dart  video_stream.dart  video_stream_stub.dart  video_stream_web.dart
frontend/openrd_frontend/test/: widget_test.dart
frontend/openrd_frontend/web/: index.html  manifest.json
infra/sudoers/: 90-openrd-video
infra/systemd/: openrd-video-native.service
infra/udev/: 99-openrd-cameras.rules
tools/: mock_control_ws_server.dart  rk_camera_v4l2_probe.sh
tools/rk3588/: README.md  build_openrd_ros2_ws.sh  configure_openrd_mediamtx.sh  enter_openrd_chroot.sh  install_openrd_video_service.sh  monitor_openrd_resource_usage.sh  monitor_openrd_video_chain.sh  mount_openrd_chroot.sh  run_openrd_ros2_smoke_test.sh  run_openrd_rtp_smoke_test.sh  run_openrd_rtsp_smoke_test.sh  run_openrd_video_smoke_test.sh
vehicle/native_video/: README.md  openrd-video-native  openrd-video-systemd
vehicle/ros2_ws/: README.md
vehicle/ros2_ws/src/openrd_bringup/: CMakeLists.txt  README.md  package.xml
vehicle/ros2_ws/src/openrd_bringup/config/: safety.yaml  serial.yaml  vehicle.yaml  video.yaml  web_bridge.yaml
vehicle/ros2_ws/src/openrd_bringup/launch/: openrd_vehicle.launch.py
vehicle/ros2_ws/src/openrd_esp32_bridge/: CMakeLists.txt  README.md  package.xml
vehicle/ros2_ws/src/openrd_esp32_bridge/src/: openrd_esp32_bridge_node.cpp
vehicle/ros2_ws/src/openrd_msgs/: CMakeLists.txt  README.md  package.xml
vehicle/ros2_ws/src/openrd_msgs/msg/: DriveCommand.msg  Esp32State.msg  VehicleState.msg  VideoState.msg
vehicle/ros2_ws/src/openrd_safety/: CMakeLists.txt  README.md  package.xml
vehicle/ros2_ws/src/openrd_safety/src/: openrd_safety_node.cpp
vehicle/ros2_ws/src/openrd_video/: CMakeLists.txt  README.md  package.xml
vehicle/ros2_ws/src/openrd_video/src/: openrd_video_node.cpp
vehicle/ros2_ws/src/openrd_web_bridge/: CMakeLists.txt  README.md  package.xml
vehicle/ros2_ws/src/openrd_web_bridge/src/: openrd_web_bridge_node.cpp
