<?xml version="1.0"?>
<package format="3">
  <name>openrd_safety</name>
  <version>0.1.0</version>
  <description>Safety node for OpenRD vehicle control.</description>
  <maintainer email="alan@example.local">Alan</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>openrd_msgs</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>